--- a/config/locales/ko.yml
+++ b/config/locales/ko.yml
@@ -1,22 +1,29 @@
 ko:
   application_name : '웹프로그래머 잠자는사자의 집'
   meta_description : '깨끗한웹을 꿈꾸는 웹프로그래머 잠자는사자의 집입니다.'
-  meta_description_intro : '웹프로그래머 잠자는사자를 여러분께 소개합니다.' 
-  meta_description_about : '웹프로그래머 잠자는 사자의 집소개'  
+  meta_description_intro : '웹프로그래머 잠자는사자를 여러분께 소개합니다.'
+  meta_description_about : '웹프로그래머 잠자는 사자의 집소개'
   meta_description_blog : '웹프로그래머 잠자는사자의 블로그'
   meta_description_gallery : '웹프로그래머 잠자는사자의 사진첩'
   meta_description_question : '웹프로그래머 잠자는사자에게 질문 , 요청'
-  meta_description_portfolio : '웹프로그래머 잠자는사자의 포트폴리오' 
-  meta_description_guest_book : '웹프로그래머 잠자는사자의 방명록' 
+  meta_description_portfolio : '웹프로그래머 잠자는사자의 포트폴리오'
+  meta_description_guest_book : '웹프로그래머 잠자는사자의 방명록'
   meta_keywords : '정종호,웹프로그래머,웹표준,퍼블리셔,웹개발,리눅스,html,html5,javascript,php,ruby,rails,레일즈,퍼블리싱,publishing,잠자는사자,SL,SleepingLion,Sleeping-Lion'
   meta_image : 'http://images.sleepinglion.pe.kr/sl.jpg'
   meta_url : 'http://www.sleepinglion.pe.kr'
   title_separator : '-'
-  
+
+  korean : '한국어'
+  english : '영어'
+  french : '프랑스어'
+  chineses : '중국어'
+  japanese : '일본어'
+  change_language : '언어바꾸기'
+
   home : '홈'
   home_title : '잠자는사자의 집'
   welcome : '님 환영합니다.'
-  search : '검색' 
+  search : '검색'
   ad : '광고'
   login : '로그인'
   logout : '로그아웃'
@@ -29,15 +36,15 @@ ko:
   flag_true : '사용'
   flag_false : '중지'
   no_data : '글이 없습니다.'
-  all_category : '전체'  
-  
+  all_category : '전체'
+
   home_main_title : '웹프로그래머 잠자는-사자입니다.'
-  home_main_description : '잠자는사자의 사자굴에 오신것을 환영합니다.'  
-  
-  success_title : '축하합니다!!'  
+  home_main_description : '잠자는사자의 사자굴에 오신것을 환영합니다.'
+
+  success_title : '축하합니다!!'
   message_success_create : '이(가) 성공적으로  등록되었습니다.'
   message_success_update : '이(가) 성공적으로  수정되었습니다.'
-  
+
   label_name : '작성자'
   label_email : '이메일'
   label_password : '비밀번호'
@@ -54,28 +61,28 @@ ko:
   action_index : '목록'
   action_show : '상세'
   action_edit : '수정'
-  action_new : '생성'  
-  link_delete_admin : '계정삭제 ' 
-  link_list : '목록으로'  
+  action_new : '생성'
+  link_delete_admin : '계정삭제 '
+  link_list : '목록으로'
   link_new : '새로작성'
-  link_show : '상세보기'  
-  link_edit : '수정'  
-  link_delete : '삭제' 
+  link_show : '상세보기'
+  link_edit : '수정'
+  link_delete : '삭제'
   link_more : '더보기'
   link_back : '뒤로'
   link_home : '홈으로'
-  
+
   answer : '답변'
   no_answer : '미답변'
-  
+
   admin :
     application_address : 'SL web factory'
-    application_description : '이 사이트를 무단으로 전제, 복제하는것은 법적으로 금지되어 있지 않습니다,'  
-  
+    application_description : '이 사이트를 무단으로 전제, 복제하는것은 법적으로 금지되어 있지 않습니다,'
+
   delete_confirm : '정말로삭제합니까?'
   delete_cascade_confirm : "중대 경고!!\n이 항목을 삭제할 경우 이 항목뿐아니라 이 항목의 정보를 포함하는 모든 데이터가 삭제됩니다.\n그래도 진행하시겠습니까?"
   delete_user_cascade_confirm : "정말로 탈퇴하겠습니까? \n 탈퇴할 경우 본인이 작성한 모든 내용 또한 연관삭제됩니다."
-  
+
   ckeditor:
     page_title: "CKEditor Files Manager"
     confirm_delete: "파일을 지웁니까?"
@@ -83,15 +90,15 @@ ko:
       cancel: "취소"
       upload: "업로드"
       delete: "삭제"
-  
+
   views :
     pagination :
       truncate : '&nbsp;...&nbsp;'
-      previous : '이전' 
+      previous : '이전'
       last : '마지막'
       next : '다음'
       first : '처음'
-      
+
   devise:
     confirmations:
       confirmed: 가입을 축하드립니다. 지금부터 로그인 가능합니다.
@@ -137,8 +144,8 @@ ko:
     unlocks:
       send_instructions: 잠시 후에 어떻게 계정을 해제(사용가능하게)할 수 있는지 설명된 이메일을 받을 수 있습니다.
       send_paranoid_instructions: 계정을 가지고 계시면, 잠시 후에 어떻게 계정을 해제(사용가능하게)할 수 있는지 설명된 이메일을 받을 수 있습니다.
-      unlocked: 계정이 성공적으로 해제되었습니다. 이제, 로그인 할 수 있습니다.      
-  
+      unlocked: 계정이 성공적으로 해제되었습니다. 이제, 로그인 할 수 있습니다.
+
   date:
     abbr_day_names:
     - 일
@@ -149,7 +156,7 @@ ko:
     - 금
     - 토
     abbr_month_names:
-    - 
+    -
     - 1월
     - 2월
     - 3월
@@ -175,7 +182,7 @@ ko:
       long: ! '%Y년 %m월 %d일 (%a)'
       short: ! '%m/%d'
     month_names:
-    - 
+    -
     - 1월
     - 2월
     - 3월
@@ -340,7 +347,7 @@ ko:
       <<: *errors
   activerecord:
     models:
-      intro : '잠자는-사자'    
+      intro : '잠자는-사자'
       gallery : '사진첩'
       guest_book : '방명록'
       portfolio : '제작작품'
@@ -355,9 +362,9 @@ ko:
       about : '사이트 소개'
       user : '회원'
       resource : '메뉴'
-      program : '프로그램'              
+      program : '프로그램'
     attributes :
-      intro : 
+      intro :
         title : '제목'
         description : '설명'
       intro_photo :
@@ -366,7 +373,7 @@ ko:
       blog :
         blog_category_id : '분류'
         title : '제목'
-        photo : '사진' 
+        photo : '사진'
         description : '설명'
         content : '내용'
       blog_content :
@@ -374,40 +381,40 @@ ko:
       blog_comment :
         name : '이름'
         password : '비밀번호'
-        content : '내용' 
+        content : '내용'
       history :
         year : '연도'
         title : '제목'
-        content : '내용'       
+        content : '내용'
       faq :
         faq_category_id : '분류'
         title : '제목'
       faq_content :
         content : '내용'
-      gallery :        
+      gallery :
         gallery_category_id : '분류'
         title : '제목'
-        photo : '사진' 
+        photo : '사진'
         location : '장소'
-        content : '내용'                       
+        content : '내용'
       guest_book :
         name : '이름'
         password : '비밀번호'
         title : '제목'
       guest_book_content :
-        content : '내용' 
-      guest_book_comment : 
+        content : '내용'
+      guest_book_comment :
         name : '이름'
         password : '비밀번호'
         content : '내용'
-      question : 
+      question :
         name : '이름'
         password : '비밀번호'
         title : '제목'
         secret : '비밀글'
       question_content :
-        content : '내용' 
-      question_comment : 
+        content : '내용'
+      question_comment :
         name : '이름'
         password : '비밀번호'
         content : '내용'
@@ -421,7 +428,7 @@ ko:
         description : '설명'
         photo : '사진'
       portfolio_content :
-        content : '내용'        
+        content : '내용'
       user :
         name : '이름'
         alternate_name : '별명'
@@ -434,5 +441,3 @@ ko:
         description : '설명'
         url : '홈페이지'
         job_title : '직업'
-        
-      
