수정함:        app/assets/javascripts/application.js 	수정함:        app/assets/stylesheets/application.scss 	수정함:        app/controllers/application_controller.rb 	수정함:        app/controllers/tags_controller.rb 	수정함:        app/views/blog_categories/_aside.html.erb 	수정함:        app/views/blogs/_tag_cloud.html.erb 	수정함:        app/views/layouts/_aside.html.erb 	수정함:        app/views/layouts/_footer.html.erb 	수정함:        app/views/layouts/_header.html.erb 	수정함:        app/views/tags/index.html.erb 	수정함:        config/application.rb 	수정함:        config/locales/ko.yml

--- a/config/locales/ko.yml
+++ b/config/locales/ko.yml
@@ -363,6 +363,7 @@ ko:
       user : '회원'
       resource : '메뉴'
       program : '프로그램'
+      tag : '이름표'
     attributes :
       intro :
         title : '제목'
