수정함:        app/assets/stylesheets/application.scss 	수정함:        app/controllers/programs_controller.rb 	수정함:        app/models/program.rb 	수정함:        app/models/program_categories_program.rb 	수정함:        app/models/program_link.rb 	수정함:        app/views/programs/index.html.erb 	수정함:        config/locales/ko.yml 	수정함:        db/migrate/20161216002146_create_program_categories.rb 	수정함:        db/migrate/20161216002148_create_programs.rb 	삭제함:        db/migrate/20161216002149_create_program_links.rb 	삭제함:        db/migrate/20161216002150_create_program_categories_programs.rb 	수정함:        db/seeds.rb

--- a/config/locales/ko.yml
+++ b/config/locales/ko.yml
@@ -75,6 +75,10 @@ ko:
   answer : '답변'
   no_answer : '미답변'
 
+  download_source : '소스받기'
+  source_repository : '소스저장소'
+  download_source_zip : 'Zip받기'
+
   admin :
     application_address : 'SL web factory'
     application_description : '이 사이트를 무단으로 전제, 복제하는것은 법적으로 금지되어 있지 않습니다,'
