수정함:        Gemfile 	수정함:        Gemfile.lock 	수정함:        app/assets/stylesheets/application.scss 	수정함:        app/helpers/application_helper.rb 	수정함:        app/helpers/board_helper.rb 	수정함:        app/helpers/question_helper.rb 	삭제함:        app/models/group.rb 	수정함:        app/models/user.rb 	수정함:        app/uploaders/album_uploader.rb 	수정함:        app/uploaders/blog_comment_uploader.rb 	수정함:        app/uploaders/blog_uploader.rb 	수정함:        app/uploaders/ckeditor_attachment_file_uploader.rb 	수정함:        app/uploaders/ckeditor_picture_uploader.rb 	수정함:        app/uploaders/gallery_uploader.rb 	수정함:        app/uploaders/intro_photo_uploader.rb 	수정함:        app/uploaders/portfolio_uploader.rb 	수정함:        app/uploaders/resource_uploader.rb 	수정함:        app/uploaders/user_uploader.rb 	수정함:        app/views/galleries/_gallery.html.erb 	수정함:        app/views/galleries/_index.html.erb 	수정함:        app/views/galleries/index.html.erb 	수정함:        app/views/galleries/show.html.erb 	수정함:        app/views/intro/index.html.erb 	수정함:        app/views/layouts/_ad.html.erb 	수정함:        app/views/layouts/application.html.erb 	수정함:        app/views/questions/_form.html.erb 	수정함:        config/initializers/carrierwave.rb 	수정함:        config/locales/ko.yml 	삭제함:        db/migrate/20120516001638_create_groups.rb 	수정함:        db/migrate/20120516002154_create_devise_to_users.rb 	수정함:        db/seeds.rb

--- a/config/locales/ko.yml
+++ b/config/locales/ko.yml
@@ -72,6 +72,25 @@ ko:
   link_back : '뒤로'
   link_home : '홈으로'
 
+
+  ########### intro #############
+  sl_intro_title : '잠자는사자 극비 신상공개!!!'
+  name : '이름'
+  name_call : '<span itemprop="additionalName">잠자는사자</span>로 불리운다'
+  sex : '성별'
+  male : '남자'
+  birthday : '생일'
+  sl_birthday : '1981년 6월 2일'
+  job : '직업'
+  web_programer : '웹프로그래머'
+  height : '키'
+  weight : '몸무게'
+  like : '좋아하는 것'
+  hate : '싫어하는 것'
+
+
+  ########## intro end ##########
+
   answer : '답변'
   no_answer : '미답변'
 
