삭제함:        app/assets/javascripts/home.js.coffee 	삭제함:        app/assets/stylesheets/admin/application.css.erb 	수정함:        app/controllers/admin/admin_controller.rb 	삭제함:        app/controllers/admin/home_controller.rb 	수정함:        app/controllers/admin/users_controller.rb 	수정함:        app/controllers/application_controller.rb 	수정함:        app/helpers/application_helper.rb 	삭제함:        app/views/layouts/admin/_aside.html.erb 	수정함:        app/views/layouts/admin/_footer.html.erb 	수정함:        app/views/layouts/admin/_header.html.erb 	수정함:        app/views/layouts/admin/application.html.erb 	수정함:        app/views/layouts/admin/login.html.erb 	삭제함:        app/views/layouts/admin/main.html.erb 	수정함:        config/locales/ko.yml 	수정함:        config/routes.rb

--- a/config/locales/ko.yml
+++ b/config/locales/ko.yml
@@ -38,6 +38,13 @@ ko:
   no_data : '글이 없습니다.'
   all_category : '전체'
 
+  login_page : '로그인 페이지'
+  login_title : '관리자 로그인'
+  login_p_id : '아이디를 입력하세요'
+  login_p_email : '이메일을 입력하세요'
+  login_p_password : '비밀번호를 입력하세요'
+  login_remember : '기억해줘'  
+
   home_main_title : '웹프로그래머 잠자는-사자입니다.'
   home_main_description : '잠자는사자의 사자굴에 오신것을 환영합니다.'
 
