--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -37,6 +37,14 @@ en:
   flag_false : '중지'
   no_data : '글이 없습니다.'
   all_category : '전체'
+  sleepinglion : 'sleepinglion'
+
+  login_page : 'Login page'
+  login_title : 'Administrator login'
+  login_p_id : 'Enter ID '
+  login_p_email : 'Enter email address'
+  login_p_password : 'Enter password'
+  login_remember : 'Remember'
 
   home_main_title : '웹프로그래머 잠자는-사자입니다.'
   home_main_description : '잠자는사자의 사자굴에 오신것을 환영합니다.'
