수정함:        app/assets/javascripts/admin/application.js  	삭제함:        app/assets/javascripts/admin/new.js  	수정함:        app/controllers/admin/blog_categories_controller.rb  	수정함:        app/controllers/admin/blogs_controller.rb  	삭제함:        app/controllers/admin/faq_categories_controller.rb  	삭제함:        app/controllers/admin/faqs_controller.rb  	수정함:        app/controllers/admin/galleries_controller.rb  	수정함:        app/controllers/admin/gallery_categories_controller.rb  	수정함:        app/controllers/admin/guest_books_controller.rb  	삭제함:        app/controllers/admin/histories_controller.rb  	수정함:        app/controllers/admin/notices_controller.rb  	수정함:        app/controllers/admin/questions_controller.rb  	수정함:        app/views/admin/blog_categories/_form.html.erb  	수정함:        app/views/admin/blog_categories/edit.html.erb  	수정함:        app/views/admin/blog_categories/new.html.erb  	수정함:        app/views/admin/blog_categories/show.html.erb  	수정함:        app/views/admin/blogs/_form.html.erb  	수정함:        app/views/admin/blogs/edit.html.erb  	수정함:        app/views/admin/blogs/index.html.erb  	수정함:        app/views/admin/blogs/new.html.erb  	수정함:        app/views/admin/blogs/show.html.erb  	삭제함:        app/views/admin/contacts/_form.html.erb  	삭제함:        app/views/admin/contacts/edit.html.erb  	삭제함:        app/views/admin/contacts/index.html.erb  	삭제함:        app/views/admin/contacts/new.html.erb  	삭제함:        app/views/admin/contacts/show.html.erb  	삭제함:        app/views/admin/faqs/_form.html.erb  	삭제함:        app/views/admin/faqs/edit.html.erb  	삭제함:        app/views/admin/faqs/index.html.erb  	삭제함:        app/views/admin/faqs/new.html.erb  	삭제함:        app/views/admin/faqs/show.html.erb  	수정함:        app/views/admin/galleries/_form.html.erb  	수정함:        app/views/admin/galleries/edit.html.erb  	수정함:        app/views/admin/galleries/index.html.erb  	수정함:        app/views/admin/galleries/new.html.erb  	수정함:        app/views/admin/galleries/show.html.erb  	수정함:   

--- a/config/locales/ko.yml
+++ b/config/locales/ko.yml
@@ -414,7 +414,7 @@ ko:
         photo : '사진'
       blog_category :
         title : '제목'
-        blogs_count : '블로그수'        
+        blogs_count : '블로그수'
         enable : '사용여부'
       blog :
         blog_category_id : '분류'
@@ -446,6 +446,7 @@ ko:
         name : '이름'
         password : '비밀번호'
         title : '제목'
+        count : '시작 조회수'
         enable : '사용여부'
       guest_book_content :
         content : '내용'
@@ -459,7 +460,7 @@ ko:
         password : '비밀번호'
         title : '제목'
         secret : '비밀글'
-        count : '조회수'
+        count : '시작 조회수'
         enable : '사용여부'
       question_content :
         content : '내용'
@@ -469,11 +470,13 @@ ko:
         content : '내용'
       notice :
         title : '제목'
+        count : '시작 조회수'        
         enable : '사용여부'
       notice_content :
         content : '내용'
       user :
         name : '이름'
+        sign_in_count : '로그인 횟수'
         alternate_name : '별명'
         email : 'E-mail'
         password : '비밀번호'
