수정함:        app/controllers/blogs_controller.rb 	수정함:        app/views/blogs/show.html.erb 	수정함:        config/locales/ko.yml

--- a/config/locales/ko.yml
+++ b/config/locales/ko.yml
@@ -81,7 +81,7 @@ ko:
   link_more : '더보기'
   link_back : '뒤로'
   link_home : '홈으로'
-
+  link_new_blog_comment_form : '댓글쓰기'
 
   ########### intro #############
   sl_intro_title : '잠자는사자 극비 신상공개!!!'
