--- a/config/locales/ko.yml
+++ b/config/locales/ko.yml
@@ -1,28 +1,21 @@
 ko:
-  application_name : '웹프로그래머 잠자는사자의 집'
-  meta_description : '깨끗한웹을 꿈꾸는 웹프로그래머 잠자는사자의 집입니다.'
-  meta_description_intro : '웹프로그래머 잠자는사자를 여러분께 소개합니다.'
-  meta_description_about : '웹프로그래머 잠자는 사자의 집소개'
-  meta_description_blog : '웹프로그래머 잠자는사자의 블로그'
-  meta_description_gallery : '웹프로그래머 잠자는사자의 사진첩'
-  meta_description_question : '웹프로그래머 잠자는사자에게 질문 , 요청'
-  meta_description_portfolio : '웹프로그래머 잠자는사자의 포트폴리오'
-  meta_description_guest_book : '웹프로그래머 잠자는사자의 방명록'
-  meta_keywords : '정종호,웹프로그래머,퍼블리셔,웹개발,웹표준,리눅스,html,html5,javascript,php,ruby,rails,레일즈,퍼블리싱,publishing,잠자는사자,SL,SleepingLion,Sleeping-Lion'
-  meta_image : 'http://assets.sleepinglion.pe.kr/sl.jpg'
-  meta_url : 'http://www.sleepinglion.pe.kr'
+  application_name : '정진규의 집'
+  application_address : '경기도 수원시 연무동'
+  application_description : '이 사이트를 무단으로 전제, 복제하는것은 법적으로 금지되어 있지 않습니다,'
+  meta_description : '장수에서 태어난 촌놈, 하지만 최고의 마누라와 자식을 가진 행운아 정진규의 집입니다.'
+  meta_description_intro : '장수 촌놈 정진규를 여러분께 소개합니다'
+  meta_description_blog : '장수 촌놈 정진규의 블로그'
+  meta_description_gallery : '장수 촌놈 정진규의 사진첩'
+  meta_description_question : '장수 촌놈 정진규에게 질문 , 요청'
+  meta_description_guest_book : '장수 촌놈 정진규의 방명록, 한마디씩 써주세요~'
+  meta_keywords : '정진규,탁구,테니스,롯데제과,환경,환경기술인,라이온스,jingyu,장수,장수군,전주,전주시,정철환,한상금,정종호,정종인,술,담배,조경'
+  meta_image : 'http://assets.jingyu.pe.kr/sl.jpg'
+  meta_url : 'http://www.jingyu.pe.kr'
   title_separator : '-'
-  default_title : '깨끗한 웹세상을 만들어가는 웹프로그래머'
-
-  korean : '한국어'
-  english : '영어'
-  french : '프랑스어'
-  chineses : '중국어'
-  japanese : '일본어'
-  change_language : '언어바꾸기'
+  default_title : '환경기술인, 탁구인 정진규'
 
   home : '홈'
-  home_title : '잠자는사자의 집'
+  home_title : '정진규의 집'
   welcome : '님 환영합니다.'
   search : '검색'
   ad : '광고'
@@ -38,7 +31,6 @@ ko:
   flag_false : '중지'
   no_data : '글이 없습니다.'
   all_category : '전체'
-  sleepinglion : '잠자는사자'
 
   login_page : '로그인 페이지'
   login_title : '관리자 로그인'
@@ -47,8 +39,8 @@ ko:
   login_p_password : '비밀번호를 입력하세요'
   login_remember : '기억해줘'
 
-  home_main_title : '웹프로그래머 잠자는-사자입니다.'
-  home_main_description : '잠자는사자의 사자굴에 오신것을 환영합니다.'
+  home_main_title : '정진규의 집에 오신것을 환영합니다.'
+  home_main_description : '난 진규에요'
 
   success_title : '축하합니다!!'
   message_success_create : '이(가) 성공적으로  등록되었습니다.'
@@ -386,7 +378,7 @@ ko:
       <<: *errors
   activerecord:
     models:
-      intro : '잠자는-사자'
+      intro : '정진규'
       blog_category : '블로그 분류'
       blog : '블로그'
       gallery_category : '사진첩 분류'
@@ -397,11 +389,8 @@ ko:
       faq_category : 'FAQ 분류'
       faq : 'FAQ'
       guest_book : '방명록'
-      contact : '상담, 문의'
       history : '연혁'
-      about : '사이트 소개'
       user : '회원'
-      program : '프로그램'
       tag : '이름표'
     attributes :
       admin :
