--- a/config/locales/ko.yml
+++ b/config/locales/ko.yml
@@ -222,7 +222,7 @@ ko:
     - 토요일
     formats:
       default: ! '%Y/%m/%d'
-      long: ! '%Y년 %m월 %d일 (%a)'
+      long: ! '%Y년 %-m월 %-d일 (%a)'
       short: ! '%m/%d'
     month_names:
     -
@@ -381,7 +381,7 @@ ko:
     am: 오전
     formats:
       default: ! '%Y/%m/%d %H:%M:%S'
-      long: ! '%Y년 %B월 %d일, %H시 %M분 %S초 %Z'
+      long: ! '%Y년 %B월 %e일, %H시 %M분 %S초 %Z'
       short: ! '%y/%m/%d %H:%M'
     pm: 오후
   # remove these aliases after 'activemodel' and 'activerecord' namespaces are removed from Rails repository
